divided the cards

--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
         <div class="flex-container">
             <div>
                 <section id="cardSection">
+                    <div id = "Administration">
+
+                    </div>
+                    <div id="Marketing">
+
+                    </div>
+                    <div id="Development">
+
+                    </div>
+                    <div id="Fainance">
+
+                    </div>
                     
                 </section>
             </div>
