adding new branch localStorage

--- a/accounting.html
+++ b/accounting.html
@@ -26,7 +26,9 @@
     </header>
 
     <main>
+        <table id = "salaryTable">
 
+        </table>
     </main>
 
     <footer>
@@ -41,5 +43,5 @@
           </div>
     </footer>
 </body>
-
+<script src ="JavaScript/accounting.js"></script>
 </html>
