--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                     <div class="input-container">
                         <label>Image URL:</label>
-                        <input type="text" id="Image" name="Image" required="" />
+                        <input type="text" id="Image" name="Image"  />
 
                     </div>
 
